fix colors on IOS web app

--- a/server-software/src/routes/layout.css
+++ b/server-software/src/routes/layout.css
@@ -1,1 +1,11 @@
 @import 'tailwindcss';
+
+body {
+	background-color: white;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: black;
+	}
+}
